--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<h1>Laura Sinkkonen</h1>
+<html>
+    <head>
+        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="basic.css">
+    </head>
+    <body>
+        <div class="container">
+            <div class="header">Header</div>
+            <div class="content">
+                <div class="category">Laura</div>
+                <div class="category">Kategoria 1</div>
+                <div class="category">Kategoria 2</div>
+                <div class="category">Kategoria 3</div>
+                <!--<div>Kategoria 4</div>
+                <div>Kategoria 5</div>
+                <div>Kategoria 6</div>
+                <div>Kategoria 7</div>-->
+                </div>
+                <div class="footer">Footer</div>
+        </div>
+        
+    </body>
+</html>
